--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <span>Живет в Швейцарии. Гражданский брак, двое детей</span>
                     <span>Гоночный инженер: Риккардо Адами</span><div class="clr"></div></div>
         <div class="clr"></div>
-        <p style="text-align: center;"><strong>7 Кими Райкконен</strong></p>
+        <div class="div1"><p style="text-align: center;"><strong>7 Кими Райкконен</strong></p>
         <img src="kimi.png" alt="Kimi">
                  <span>Родился: 17.10.1979 в Эспо, Финляндия</span>
                     <span>Рост: 175 см</span>
@@ -79,7 +79,8 @@
                     <span>Лучших кругов: 42</span>
                     <span>Очков: 1177</span>
                     <span>Живет в Швейцарии. Гражданский брак, имеет сына.</span>
-                    <span>Гоночный инженер: Дэвид Гринвуд</span>
+                    <span>Гоночный инженер: Дэвид Гринвуд</span><div class="clr"></div></div>
+        <div class="clr"></div>
         </div>
     </body>
 </html>
