--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="#">Команда</a></li>
                     <li><a href="#">Календарь гонок</a></li>
-                    <li><a href="#">История</a></li>
+                    <li><a href="history.html">История</a></li>
                     <li><a href="#">Галерея</a></li>
                 </ul>
             </nav>
