--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#">Команда</a></li>
                     <li><a href="#">Календарь гонок</a></li>
                     <li><a href="history.html">История</a></li>
-                    <li><a href="#">Галерея</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
                 </ul>
             </nav>
             <h1>Scuderria ferrari</h1>
